--- a/widgets/calcstab.ui
+++ b/widgets/calcstab.ui
@@ -20,33 +20,17 @@
       <string>Carrier Fuel / Range (assuming 1000 in tank)</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="1">
-       <widget class="QSpinBox" name="sbCargo">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This includes any cargo on carrier, except tritium to use during flight.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Cargo, initial fuel mass:</string>
         </property>
-        <property name="maximum">
-         <number>25000</number>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QSpinBox" name="sbModules">
-        <property name="toolTip">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This includes mass of all installed modules on carrier. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-        </property>
-        <property name="minimum">
-         <number>100</number>
-        </property>
-        <property name="maximum">
-         <number>23000</number>
-        </property>
-        <property name="value">
-         <number>1206</number>
+        <property name="buddy">
+         <cstring>sbFuel</cstring>
         </property>
        </widget>
       </item>
-      <item row="4" column="0" colspan="2">
+      <item row="5" column="0" colspan="2">
        <widget class="QLabel" name="lblResult">
         <property name="text">
          <string/>
@@ -73,13 +57,10 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_3">
+      <item row="4" column="0" colspan="2">
+       <widget class="QLabel" name="lblMass">
         <property name="text">
-         <string>Cargo, initial fuel mass:</string>
-        </property>
-        <property name="buddy">
-         <cstring>sbFuel</cstring>
+         <string/>
         </property>
        </widget>
       </item>
@@ -93,11 +74,56 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0" colspan="2">
-       <widget class="QLabel" name="lblMass">
-        <property name="text">
-         <string/>
+      <item row="0" column="1">
+       <widget class="QSpinBox" name="sbModules">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This includes mass of all installed modules on carrier. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
+        <property name="minimum">
+         <number>100</number>
+        </property>
+        <property name="maximum">
+         <number>23000</number>
+        </property>
+        <property name="value">
+         <number>1206</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="sbCargo">
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This includes any cargo on carrier, except tritium to use during flight.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="maximum">
+         <number>25000</number>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="title">
+         <string>Jump Mode:</string>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QRadioButton" name="rbTankFull">
+           <property name="text">
+            <string>Keep Tank Full</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="rbOnEmpty">
+           <property name="text">
+            <string>Refuel on Empty</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
      </layout>
