--- a/resources.qrc
+++ b/resources.qrc
@@ -9,5 +9,6 @@
         <file>images/button round start.png</file>
         <file>images/Undo.png</file>
         <file>images/Start here.png</file>
+        <file>images/carrier-waybill-query-128.png</file>
     </qresource>
 </RCC>
